# ExplainPPT

./: .env.example  LICENSE  README.md  README_PPTX.md  app.py  grid_collage.py  ppt_to_grid.py  pptx_to_images.py  pyproject.toml
2/: FA12e_02_Notes.pptx
