[project]
name = "ppt-to-grid"
version = "0.2.0"
description = "Convert PowerPoint slides to 3x3 grid images using CloudConvert"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cloudconvert>=2.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]

[project.scripts]
ppt2grid = "ppt_to_grid:main"

[dependency-groups]
dev = []
